# hitlist

./: .coverage.Arachne.lan.12883.Xbrsqhdx  .coverage.Arachne.lan.36041.XPxdVNnx  .coverage.Arachne.lan.36316.XAVnkBEx  .coverage.arachne.wireless-1x.unc.edu.30100.XgKqAGVx  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  mkdocs.yml  pyproject.toml  test.sh
.github/workflows/: tests.yml
docs/: pmid-curation.md  source-classification.md
hitlist/: __init__.py  aggregate.py  apm.py  builder.py  bulk_proteomics.py  cell_name_parser.py  cli.py  condition_categories.py  curation.py  downloads.py  export.py  genes.py  indexer.py  line_expression.py  mappings.py  observations.py  peptide_modifications.py  pmhc_query.py  predict.py  proteome.py  qc.py  report.py  samples.py  scanner.py  supplement.py  version.py
scripts/: add_reference_proteomes.py  curate_gomez_zepeda.py  demo_proteome_cache.py  ingest_bekker_jensen_2017.py  profile_build.py  profile_iedb.py
tasks/: binding_index_split.md  lessons.md  mhc_curation_tracker.md  monoallelic_audit.md  per_sample_allele_curation_audit.md  todo.md  training_table_design.md
tests/: conftest.py  test_aggregate.py  test_apm.py  test_apply_winners_vectorized.py  test_builder.py  test_bulk_proteomics.py  test_cell_name_parser.py  test_cli_build_group.py  test_cli_export_cleanup.py  test_cli_pmhc_samples.py  test_cli_version.py  test_condition_categories.py  test_curation.py  test_export.py  test_genes.py  test_line_expression.py  test_mappings.py  test_multi_proteome_flanking.py  test_observations.py  test_peptide_modifications.py  test_pmhc_query.py  test_predict.py  test_proteome.py  test_qc.py  test_report.py  test_samples.py  test_scanner.py  test_supplement.py  test_supplementary_build_e2e.py  test_xdist_cache.py  xdist_cache.py
(+29 files in other folders)
